--- a/front/index.html
+++ b/front/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hejsan</title>
+    <link rel="stylesheet" href="/front/style.css">
 </head>
 <body>
     <h1>tjenatjena</h1>
+    <ul id="navbar">
+        <li class="nav-item">Home</li>
+        <li class="nav-item">About</li>
+        <li class="nav-item">Contact Us</li>
+    </ul>
+
+    
+
+    <script src="script.js"></script>
 </body>
 </html>
