--- a/front/index.html
+++ b/front/index.html
@@ -14,7 +14,19 @@
         <li class="nav-item">About</li>
         <li class="nav-item">Contact Us</li>
     </ul>
-
+    <nav>
+        <ul>
+          <li><a href="#">Sun</a></li>
+          <li><a href="#">Mercury</a></li>
+          <li><a href="#">Venus</a></li>
+          <li><a href="#">Earth</a></li>
+          <li><a href="#">Mars</a></li>
+          <li><a href="#">Jupiter</a></li>
+          <li><a href="#">Saturn</a></li>
+          <li><a href="#">Uranus</a></li>
+        </ul>
+      </nav>
+      
     
 
     <script src="script.js"></script>
