--- a/front/index.html
+++ b/front/index.html
@@ -24,6 +24,7 @@
           <li><a href="#">Jupiter</a></li>
           <li><a href="#">Saturn</a></li>
           <li><a href="#">Uranus</a></li>
+          <li><a href="#">Jupiter</a></li>
         </ul>
       </nav>
       
