--- a/front/index.html
+++ b/front/index.html
@@ -5,25 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hejsan</title>
-    <link rel="stylesheet" href="/front/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Seymour+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <ul id="navbar">
-        <li class="nav-item">Home</li>
-        <li class="nav-item">About</li>
-        <li class="nav-item">Contact Us</li>
+      <li class="nav-item">Home</li>
+      <li class="nav-item">About</li>
+      <li class="nav-item">Contact Us</li>
     </ul>
     <nav>
         <ul>
-          <li><a href="#">Sun</a></li>
+          <li><img src="/front/images/sun.png" alt="Sun"><a href="#">Sun</a></li>
           <li><img src="/front/images/mercury.png" alt="'Mercury"><a href="#">Mercury</a></li>
-          <li><a href="">Venus</a>/front/images/mercury.png</li>
-          <li><a href="#">Earth</a></li>
-          <li><a href="#">Mars</a></li>
-          <li><a href="#">Jupiter</a></li>
-          <li><a href="#">Saturn</a></li>
-          <li><a href="#">Uranus</a></li>
-          <li><a href="#">Jupiter</a></li>
+          <li><img src="/front/images/venus.png"alt="Venus"><a href="Venus">Venus</a></li>
+          <li><img src="/front/images/planet-earth.png"alt="Earth"><a href="#">Earth</a></li>
+          <li><img src="/front/images/mars.png"alt="mars"><a href="#"></a><a href="#">Mars</a></li>
+          <li><img src="/front/images/jupiter.png"alt="Jupiter"><a href="#"></a><a href="#">Jupiter</a></li>
+          <li><img src="/front/images/planet.png"alt="Earth"><a href="#"></a><a href="#">Saturn</a></li>
+          <li><img src="/front/images/uranus.png"alt="Earth"><a href="#"></a><a href="#">Uranus</a></li>
+          <li><img src="/front/images/jupiter.png"alt="Earth"><a href="#"></a><a href="#">Jupiter</a></li>
         </ul>
 
       
