--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hejsan</title>
+    <title id="title-of-secound-site"></title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Seymour+One&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
@@ -12,12 +12,12 @@
 </head>
 <body style="background-color: #333;">
     
-    <div id="nav">
-            <button class="nav-btn" id="nav-item-home">Home</button>
-            <button class="nav-btn" id="nav-item-search-astro">search astronomi</button>
-            <button class="nav-btn" id="nav-item-about">About</button>
-            <button class="nav-btn" id="nav-item.contact">Contact Us</button>
-      </div>
+  <div id="nav">
+    <button><a href="index.html" > Home </a></button>
+    <button><a href="searched-content.html" > Search astronomi </a></button>
+    <button><a href="index.html" > About </a></button>
+    <button><a href="searched-content.html" > Contact us </a></button>
+  </div>
       
     </ul>
     <div id="search-container">
