--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -10,13 +10,12 @@
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 </head>
-<body style="background-color: #333;">
+
     
   <div id="nav">
     <button><a href="index.html" > Home </a></button>
     <button><a href="searched-content.html" > Search astronomi </a></button>
     <button><a href="index.html" > About </a></button>
-    <button><a href="searched-content.html" > Contact us </a></button>
   </div>
       
     </ul>
@@ -75,10 +74,10 @@
       <div id="tableContainer">
         <table id="imgTable">
           <tr>
-            <th scope="col" style="width: 40px">No</th>
-            <th scope="col" style="width: 40px">Title</th>
-            <th scope="col">image</th>
-            <th scope="col" style="width: 100px">Description</th>
+            <th scope="col" style="width: 40px">Nummer</th>
+            <th scope="col" style="width: 40px">Titel</th>
+            <th scope="col">Bild</th>
+            <th scope="col" style="width: 100px">Beskrivning</th>
           </tr>
         </table>
       </div>
