--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,25 +11,21 @@
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 </head>
 
-  
+<div class="field">
   <div id="nav">
-      <button><a href="index.html" > Home </a></button>
-      <button><a href="searched-content.html" > Search astronomi </a></button>
-      <button><a href="index.html" > About </a></button>
-      <button><a href="searched-content.html" > Contact us </a></button>
-    </div>
+    <button><a href="index.html" > Home </a></button>
+    <button><a href="searched-content.html" > Search astronomi </a></button>
+    <button><a href="index.html" > About </a></button>
+  </div>
+</div>
       
-     <!--
+
     </ul>
     <div id="search-container">
-      <input type="text" id="search-input" placeholder="search here">
+      <input type="text" id="search-input" placeholder="Search here">
       <button type="button" id="search-button">Search</button>
     </div>
---> 
-  
-  <!--
   <div id="content">
-
       <nav>
         <ul>
           <div>
@@ -74,21 +70,13 @@
               </div>
         </ul>
       </nav>
-      -->
 
-      <div id="tableContainerApod">
-        <table id="apodTable">
-          <tr>
-            <th scope="col" style="width: 40px">Title</th>
-            <th scope="col" style="width: 40px">image</th>
-            <th scope="col" style="width: 40px">Description</th>
-            <th scope="col" style="width: 50px">auther</th>
-            <th scope="col" style="width: 50px">date</th>
-          </tr>
-        </table>
-      </div>
+
+ 
       
     </div>
+
+   
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
