--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,13 +10,22 @@
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 </head>
-
 <div class="field">
   <div id="nav">
     <button><a href="index.html" > Home </a></button>
     <button><a href="searched-content.html" > Search astronomi </a></button>
     <button><a href="index.html" > About </a></button>
   </div>
+</div>
+<div id="tableContainer">
+  <table id="imgTable">
+    <tr>
+      <th scope="col" style="width: 40px">Nummer</th>
+      <th scope="col" style="width: 40px">Titel</th>
+      <th scope="col">Bild</th>
+      <th scope="col" style="width: 100px">Beskrivning</th>
+    </tr>
+  </table>
 </div>
 <div class="container">        
   <form action="">
@@ -108,7 +117,7 @@
       
     </div>
 
-   
+    <script src="https://open.spotify.com/embed-podcast/iframe-api/v1" async></script>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
