--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 </head>
 
-    
+<body onload="onPageLoad()"> 
   <div id="nav">
     <button><a href="index.html" > Home </a></button>
     <button><a href="searched-content.html" > Search astronomi </a></button>
@@ -70,28 +70,7 @@
               </div>
         </ul>
       </nav>
-      <div>
-        <div id="login">
-         <h1>First, log in to spotify</h1>
-         <a href="/login">Log in</a>
-        </div>
-        <div id="loggedin">
-        </div>
-     </div>
-    
-     <script id="loggedin-template" type="text/x-handlebars-template">
-        <h1>Logged in as </h1>
-        <img id="avatar" width="200" src="" />
-        <dl>
-         <dt>Display name</dt><dd></dd>
-         <dt>Username</dt><dd></dd>
-         <dt>Email</dt><dd></dd>
-         <dt>Spotify URI</dt><dd><a href=""></a></dd>
-         <dt>Link</dt><dd><a href=""></a></dd>
-         <dt>Profile Image</dt><dd></dd>
-        </dl>
-        <p><a href="/">Log in again</a></p>
-     </script>
+   
       <div id="tableContainer">
         <table id="imgTable">
           <tr>
@@ -103,6 +82,29 @@
         </table>
       </div>
     </div>
+    <div>
+      <div id="login">
+       <h1>First, log in to spotify</h1>
+       <a href="/login">Log in</a>
+      </div>
+      <div id="loggedin">
+      </div>
+   </div>
+  
+   <script id="loggedin-template" type="text/x-handlebars-template">
+      <h1>Logged in as </h1>
+      <img id="avatar" width="200" src="" />
+      <dl>
+       <dt>Display name</dt><dd></dd>
+       <dt>Username</dt><dd></dd>
+       <dt>Email</dt><dd></dd>
+       <dt>Spotify URI</dt><dd><a href=""></a></dd>
+       <dt>Link</dt><dd><a href=""></a></dd>
+       <dt>Profile Image</dt><dd></dd>
+      </dl>
+      <p><a href="/">Log in again</a></p>
+   </script>
     <script src="script.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
