--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -85,7 +85,7 @@
     <div>
       <div id="login">
        <h1>First, log in to spotify</h1>
-       <a href="/login">Log in</a>
+       <a href="http://localhost:8888/login">Log in</a>
       </div>
       <div id="loggedin">
       </div>
