--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -90,7 +90,31 @@
       <div id="loggedin">
       </div>
    </div>
-  
+   <div>
+    <h2>Created Playlist:</h2>
+    <iframe src="" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
+  <script src="https://sdk.scdn.co/spotify-player.js"></script>
+<script>
+  // Authenticate with Spotify's API to get an access token
+  const clientId = '38d9e5c35e734857b7e0f633c1fafd99';
+  const redirectUri = 'http://127.0.0.1:5500/frontend/searched-content.html';
+  const scope = 'user-library-read';
+  const authUrl = `https://accounts.spotify.com/authorize?client_id=${clientId}&redirect_uri=${redirectUri}&scope=${scope}&response_type=token`;
+
+  // Wait for authentication redirect and display the playlist
+  window.addEventListener('hashchange', () => {
+    const token = getAccessTokenFromHash();
+    const playlistUrl = 'https://open.spotify.com/embed/playlist/your_playlist_id';
+    document.querySelector('iframe').src = `${playlistUrl}?access_token=${token}`;
+  });
+
+  function getAccessTokenFromHash() {
+    const hash = window.location.hash.substring(1);
+    const token = new URLSearchParams(hash).get('access_token');
+    return token;
+  }
+</script>
    <script id="loggedin-template" type="text/x-handlebars-template">
       <h1>Logged in as </h1>
       <img id="avatar" width="200" src="" />
@@ -104,7 +128,8 @@
       </dl>
       <p><a href="/">Log in again</a></p>
    </script>
+    <script src="recommend.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
-    <script src="app.js" type="text/javascript"></script>
+    <script src="call.js" type="text/javascript"></script>
 </body>
 </html>
