--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -85,7 +85,7 @@
     <div>
       <div id="login">
        <h1>First, log in to spotify</h1>
-       <a href="http://localhost:8888/login">Log in</a>
+       <a href="https://accounts.spotify.com/authorize">Log in</a>
       </div>
       <div id="loggedin">
       </div>
@@ -95,39 +95,32 @@
     <iframe src="" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
-<script>
-  // Authenticate with Spotify's API to get an access token
-  const clientId = '38d9e5c35e734857b7e0f633c1fafd99';
-  const redirectUri = 'http://127.0.0.1:5500/frontend/searched-content.html';
-  const scope = 'user-library-read';
-  const authUrl = `https://accounts.spotify.com/authorize?client_id=${clientId}&redirect_uri=${redirectUri}&scope=${scope}&response_type=token`;
 
-  // Wait for authentication redirect and display the playlist
-  window.addEventListener('hashchange', () => {
-    const token = getAccessTokenFromHash();
-    const playlistUrl = 'https://open.spotify.com/embed/playlist/your_playlist_id';
-    document.querySelector('iframe').src = `${playlistUrl}?access_token=${token}`;
-  });
-
-  function getAccessTokenFromHash() {
-    const hash = window.location.hash.substring(1);
-    const token = new URLSearchParams(hash).get('access_token');
-    return token;
-  }
-</script>
-   <script id="loggedin-template" type="text/x-handlebars-template">
-      <h1>Logged in as </h1>
-      <img id="avatar" width="200" src="" />
+  <div class="container">
+    <h1>Displaying User Data</h1>
+    <p>Log in with your Spotify account and this demo will display information about you fetched using the Spotify Web API</p>
+    <button class="btn btn-primary" id="btn-login">Login</button>
+    <div id="result"></div>
+</div>
+  <script id="result-template" type="text/x-handlebars-template">
       <dl>
-       <dt>Display name</dt><dd></dd>
-       <dt>Username</dt><dd></dd>
-       <dt>Email</dt><dd></dd>
-       <dt>Spotify URI</dt><dd><a href=""></a></dd>
-       <dt>Link</dt><dd><a href=""></a></dd>
-       <dt>Profile Image</dt><dd></dd>
+        <img src="{{images.0.url}}">
+        <dt>User Name</dt>
+        <dd>{{id}}</dd>
+        <dt>Display Name</dt>
+        <dd>{{display_name}}</dd>
+        <dt>Country</dt>
+        <dd>{{country}}</dd>
+        <dt>Followers</dt>
+        <dd>{{followers.total}}</dd>
+        <dt>Profile</dt>
+        <dd><a href="{{external_urls.spotify}}" target="_blank">{{external_urls.spotify}}</a></dd>
+        <dt>Email</dt>
+        <dd>{{email}}</dd>
+        <dt>Product</dt>
+        <dd>{{product}}</dd>
       </dl>
-      <p><a href="/">Log in again</a></p>
-   </script>
+  </script>
     <script src="recommend.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
     <script src="call.js" type="text/javascript"></script>
