--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -90,16 +90,13 @@
       <div id="loggedin">
       </div>
    </div>
-   <div>
-    <h2>Created Playlist:</h2>
-    <iframe src="" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-  </div>
-  <script src="https://sdk.scdn.co/spotify-player.js"></script>
 
   <div class="container">
     <h1>Displaying User Data</h1>
     <p>Log in with your Spotify account and this demo will display information about you fetched using the Spotify Web API</p>
     <button class="btn btn-primary" id="btn-login">Login</button>
+    <input type = "button" onclick = "login()" value = "Logga in">  
+
     <div id="result"></div>
 </div>
   <script id="result-template" type="text/x-handlebars-template">
