löst fetch + localhost8080

--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 </head>
 
-<body onload="onPageLoad()"> 
+<body> 
   <div id="nav">
     <button><a href="index.html" > Home </a></button>
     <button><a href="searched-content.html" > Search astronomi </a></button>
