--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -15,13 +15,23 @@
   <div id="nav">
     <button><a href="index.html" > Home </a></button>
     <button><a href="searched-content.html" > Search astronomi </a></button>
-    <button><a href="about.html" > About </a></button>
+    <button><a href="index.html" > About </a></button>
   </div>
+  <div class="container">
+    <p>Log in with your Spotify account and this demo will display information about you fetched using the Spotify Web API</p>
+    <input type = "button" onclick = "login()" value = "Logga in">  
+    <a href="https://www.spotify.com/logout/">Logga ut</a>
+    <div id="result"></div>
+</div>
       
     </ul>
     <div id="search-container">
       <input type="text" id="search-input" placeholder="search here">
       <button type="button" id="search-button">Search</button>
+    </div>
+    <div id="search-container">
+      <input type="text" id="search-song" placeholder="search here">
+      <button type="button" id="search-button-song">Search</button>
     </div>
 
     <div id="content">
@@ -81,18 +91,32 @@
           </tr>
         </table>
       </div>
-      <div id="tableContainer">
-        <table id="imgTable">
-          <tr>
-            <th scope="col" style="width: 40px">Nummer</th>
-            <th scope="col" style="width: 40px">Titel</th>
-            <th scope="col">Bild</th>
-            <th scope="col" style="width: 100px">Beskrivning</th>
-          </tr>
-        </table>
-      </div>
     </div>
  
+    <input type="text" id="search-input" placeholder="Search for an artist or track...">
+
+
+  <script id="result-template" type="text/x-handlebars-template">
+      <dl>
+        <img src="{{images.0.url}}">
+        <dt>User Name</dt>
+        <dd>{{id}}</dd>
+        <dt>Display Name</dt>
+        <dd>{{display_name}}</dd>
+        <dt>Country</dt>
+        <dd>{{country}}</dd>
+        <dt>Followers</dt>
+        <dd>{{followers.total}}</dd>
+        <dt>Profile</dt>
+        <dd><a href="{{external_urls.spotify}}" target="_blank">{{external_urls.spotify}}</a></dd>
+        <dt>Email</dt>
+        <dd>{{email}}</dd>
+        <dt>Product</dt>
+        <dd>{{product}}</dd>
+      </dl>
+  </script>
+    <script src="recommend.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
+    <script src="call.js" type="text/javascript"></script>
 </body>
 </html>
