--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -29,8 +29,8 @@
       <input type="text" id="search-input" placeholder="search here">
       <button type="button" id="search-button">Search</button>
     </div>
-    <div id="search-container">
-      <input type="text" id="search-song" placeholder="search here">
+    <div id="search-container2">
+      <input type="text" id="search-song" placeholder="search here song">
       <button type="button" id="search-button-song">Search</button>
     </div>
 
@@ -91,8 +91,23 @@
           </tr>
         </table>
       </div>
+      <div id="tableContainer">
+        <table id="imgTable2">
+          <tr>
+            <th scope="col" style="width: 40px">Nummer</th>
+            <th scope="col" style="width: 40px">Titel</th>
+            <th scope="col">Bild</th>
+            <th scope="col" style="width: 100px">Beskrivning</th>
+          </tr>
+        </table>
+      </div>
     </div>
- 
+<div class="container">
+  <div id="track-name"></div>
+  <div id="artist-name"></div>
+  <div id="album-name"></div>
+  <div id="album-cover"></div>
+</div>
     <input type="text" id="search-input" placeholder="Search for an artist or track...">
 
 
@@ -117,6 +132,5 @@
   </script>
     <script src="recommend.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
-    <script src="call.js" type="text/javascript"></script>
 </body>
 </html>
