--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -102,11 +102,7 @@
         </table>
       </div>
     </div>
-<div class="container">
-  <div id="track-name"></div>
-  <div id="artist-name"></div>
-  <div id="album-name"></div>
-  <div id="album-cover"></div>
+<div class="tracks">
 </div>
     <input type="text" id="search-input" placeholder="Search for an artist or track...">
 
