--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -29,11 +29,6 @@
       <input type="text" id="search-input" placeholder="search here">
       <button type="button" id="search-button">Search</button>
     </div>
-    <div id="search-container2">
-      <input type="text" id="search-song" placeholder="search here song">
-      <button type="button" id="search-button-song">Search</button>
-    </div>
-
     <div id="content">
 
       <nav>
@@ -88,45 +83,13 @@
             <th scope="col" style="width: 40px">Titel</th>
             <th scope="col">Bild</th>
             <th scope="col" style="width: 100px">Beskrivning</th>
-          </tr>
-        </table>
-      </div>
-      <div id="tableContainer">
-        <table id="imgTable2">
-          <tr>
-            <th scope="col" style="width: 40px">Nummer</th>
-            <th scope="col" style="width: 40px">Titel</th>
-            <th scope="col">Bild</th>
-            <th scope="col" style="width: 100px">Beskrivning</th>
+            <th scope="col" style="width: 200px">Låt</th>
           </tr>
         </table>
       </div>
     </div>
-<div class="tracks">
+<div id="tracks">
 </div>
-    <input type="text" id="search-input" placeholder="Search for an artist or track...">
-
-
-  <script id="result-template" type="text/x-handlebars-template">
-      <dl>
-        <img src="{{images.0.url}}">
-        <dt>User Name</dt>
-        <dd>{{id}}</dd>
-        <dt>Display Name</dt>
-        <dd>{{display_name}}</dd>
-        <dt>Country</dt>
-        <dd>{{country}}</dd>
-        <dt>Followers</dt>
-        <dd>{{followers.total}}</dd>
-        <dt>Profile</dt>
-        <dd><a href="{{external_urls.spotify}}" target="_blank">{{external_urls.spotify}}</a></dd>
-        <dt>Email</dt>
-        <dd>{{email}}</dd>
-        <dt>Product</dt>
-        <dd>{{product}}</dd>
-      </dl>
-  </script>
-    <script src="recommend.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
