--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -87,6 +87,17 @@
           </tr>
         </table>
       </div>
+      <div id="tableContainer">
+        <table id="imgTable2">
+          <tr>
+            <th scope="col" style="width: 40px">Nummer</th>
+            <th scope="col" style="width: 40px">Titel</th>
+            <th scope="col">Bild</th>
+            <th scope="col" style="width: 100px">Beskrivning</th>
+            <th scope="col" style="width: 200px">Låt</th>
+          </tr>
+        </table>
+      </div>
     </div>
 <div id="tracks">
 </div>
