--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -17,7 +17,7 @@
     <button><a href="searched-content.html" > Search astronomi </a></button>
     <button><a href="index.html" > About </a></button>
   </div>
-  <div class="container">
+  <div id="container">
     <p>Log in with your Spotify account and this demo will display information about you fetched using the Spotify Web API</p>
     <input type = "button" onclick = "login()" value = "Logga in">  
     <a href="https://www.spotify.com/logout/">Logga ut</a>
@@ -83,7 +83,6 @@
             <th scope="col" style="width: 40px">Titel</th>
             <th scope="col">Bild</th>
             <th scope="col" style="width: 100px">Beskrivning</th>
-            <th scope="col" style="width: 200px">Låt</th>
           </tr>
         </table>
       </div>
