--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -18,7 +18,8 @@
     <button><a href="index.html" > About </a></button>
   </div>
   <div id="container">
-    <p>Log in with your Spotify account and this demo will display information about you fetched using the Spotify Web API</p>
+    <p>Sök efter din favoritlåt och se vad rymden säger om låten!</p>
+    <p>Logga in med ditt Spotify-konto så kommer den här demon att visa information om dig hämtad med Spotify Web API</p>
     <input type = "button" onclick = "login()" value = "Logga in">  
     <a href="https://www.spotify.com/logout/">Logga ut</a>
     <div id="result"></div>
@@ -26,7 +27,7 @@
       
     </ul>
     <div id="search-container">
-      <input type="text" id="search-input" placeholder="search here">
+      <input type="text" id="search-input" placeholder="Sök här ">
       <button type="button" id="search-button">Search</button>
     </div>
     <div id="content">
