--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title id="title-of-secound-site"></title>
+  <title>Space Search</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,33 +15,43 @@
 </head>
 
 <body>
-  <div id="nav">
-    <button><a href="index.html"> Home </a></button>
-    <button><a href="searched-content.html"> Search astronomi </a></button>
-    <button><a href="index.html"> About </a></button>
-  </div>
   <div id="container">
+    <header>
+      <h1>SpaceSearch</h1>
+    </header>
+    <h1>Vem som är inloggad:</h1>
+    <div id="loggedin"></div>
+    <section id="profile">
+      <h2>Inloggad som <span id="displayName"></span></h2>
+      <span id="avatar"></span>
+      <ul>
+        <li>AnvändarID: <span id="id"></span></li>
+        <li>Emailadress: <span id="email"></span></li>
+        <li>Spotify URI: <a id="uri" href="#"></a></li>
+        <li>Länk: <a id="url" href="#"></a></li>
+      </ul>
+    </section>
     <p>Sök efter din favoritlåt och se vad rymden säger om låten!</p>
     <p>Logga in med ditt Spotify-konto så kommer den här demon att visa information om dig hämtad med Spotify Web API
     </p>
-    <input type="button" onclick="login()" value="Logga in">
-    <a href="https://www.spotify.com/logout/">Logga ut</a>
-    <div id="result"></div>
-  </div>
 
-  </ul>
+    <button onclick="login()"> Logga in</button>
+    <button onclick="logout()">Logga ut</button>
+    <div id="confirmation-message"></div>
+
+
   <div id="search-container">
     <input type="text" id="search-input" placeholder="Sök här ">
     <button type="button" id="search-button">Search</button>
   </div>
-  <div id="content">
-
-    <nav>
-      <ul>
-        <div>
-          <img class="icons" src="./images/sun.png" alt="Sun">
-          <li class="suggestion">
-            Sun</li>
+<div id="wraps">
+  <nav>
+    <ul>
+      <h5>Klicka på en av dessa ikoner för att se matchande låtar för dessa planeter!</h5>
+      <div>
+        <img class="icons" src="./images/sun.png" alt="Sun">
+        <li class="suggestion">
+          Sun</li>
         </div>
         <div>
           <img class="icons" src="./images/mercury.png" alt="'Mercury">
@@ -80,7 +90,6 @@
         </div>
       </ul>
     </nav>
-
     <div id="tableContainer">
       <table id="imgTable">
         <tr>
@@ -106,6 +115,7 @@
   <div id="tracks">
   </div>
   <script src="script.js" type="text/javascript"></script>
+  <script src="actions.js" type="text/javascript"></script>
 </body>
 
 </html>
