--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -116,6 +116,8 @@
   </div>
   <script src="script.js" type="text/javascript"></script>
   <script src="actions.js" type="text/javascript"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+
 </body>
 
 </html>
