--- a/frontend/searched-content.html
+++ b/frontend/searched-content.html
@@ -33,7 +33,7 @@
     </section>
     <p>Sök efter din favoritlåt och se vad rymden säger om låten!</p>
     <p>Logga in med ditt Spotify-konto så kommer den här demon att visa information om dig hämtad med Spotify Web API
-    </p>
+    <p>Vill du spela upp musik så <b>måste</b> du vara inloggad!</p>
 
     <button onclick="login()"> Logga in</button>
     <button onclick="logout()">Logga ut</button>
